Add Firebase Analytics, legal compliance, and enhanced UX features
Major features:
- Firebase Analytics integration with comprehensive event tracking
- Privacy Policy and Terms of Service with multi-language support
- Legal consent flow with modal UI component
- AppContext for centralized state management
- Downloadable languages with additional translations (DE, ES, FR)
- Landscape orientation support for allergy card
- Enhanced accessibility with proper ARIA labels
- EAS build configuration for app distribution

Documentation:
- Firebase setup guide
- Analytics implementation guide
- Legal compliance quick start guide
- Future extensions roadmap

Technical improvements:
- Replaced prop drilling with React Context
- Improved error handling with ErrorBoundary
- Better state persistence with AsyncStorage optimization
- Enhanced UI components with safe area handling

--- a/locales/it.json
+++ b/locales/it.json
@@ -8,13 +8,19 @@
     "addAllergies": "Aggiungi Allergie",
     "editAllergies": "Modifica allergie",
     "showCard": "Mostra Card",
-    "showCardToWaiter": "Mostra Card al Cameriere",
+    "showCardToWaiter": "Mostra Card",
     "settings": "Impostazioni",
     "whereAreYouTraveling": "Dove stai viaggiando?",
     "chooseLanguage": "Scegli la lingua per comunicare le tue allergie",
     "change": "Cambia",
     "cardReadyIn": "La tua card è pronta in",
-    "selectLanguage": "Scegli la lingua"
+    "selectLanguage": "Scegli la lingua",
+    "downloadMoreLanguages": "Scarica altre lingue",
+    "bannerWelcome": "Ovunque tu vada",
+    "bannerMotivation": "Viaggia in sicurezza, comunica le tue allergie senza barriere",
+    "bannerTip": "Aggiungi le tue allergie e viaggia con più leggerezza",
+    "bannerHowToUse": "Comunica in modo chiaro",
+    "bannerHowToUseDesc": "Presenta la tua card al cameriere quando ordini al ristorante"
   },
   "addAllergy": {
     "title": "Aggiungi Allergie",
@@ -36,14 +42,15 @@
     "back": "Indietro",
     "appLanguage": "Lingua dell'App",
     "cardLanguage": "Lingua della Card",
-    "clearData": "Cancella Tutti i Dati",
-    "clearDataConfirm": "Sei sicuro di voler cancellare tutti i dati?",
+    "clearData": "Inizializza App",
+    "clearDataConfirm": "Tutte le allergie selezionate e le lingue scaricate saranno rimosse. Vuoi procedere?",
+    "clearDataSuccess": "App inizializzata con successo!",
     "cancel": "Annulla",
     "confirm": "Conferma",
     "italian": "Italiano",
     "english": "Inglese",
     "downloadLanguages": "Scarica Altre Lingue",
-    "downloadLanguagesDesc": "Scarica lingue aggiuntive per le card allergie",
+    "downloadLanguagesDesc": "Scarica lingue aggiuntive per le card allergie e per utilizzare la app offline",
     "download": "Scarica",
     "downloaded": "Scaricata!",
     "delete": "Elimina",
@@ -62,6 +69,16 @@
     "region_europe": "Europa",
     "region_asia": "Asia e Medio Oriente",
     "region_africa": "Africa",
-    "region_other": "Altro"
+    "region_other": "Altro",
+    "cancelDownload": "Annulla",
+    "downloadCancelled": "Download annullato",
+    "privacyPolicy": "Privacy",
+    "privacyPolicyDesc": "Come trattiamo i tuoi dati",
+    "disclaimer": "Disclaimer",
+    "disclaimerDesc": "Importante da leggere",
+    "about": "Informazioni",
+    "privacyContent": "AllergiApp memorizza le tue allergie localmente sul tuo dispositivo. L'app può raccogliere dati anonimi di utilizzo per migliorare il servizio. Puoi fornire opzionalmente alcune informazioni demografiche a fini statistici. Nessun dato personale identificabile viene raccolto o condiviso. Le traduzioni sono gestite tramite servizi esterni.",
+    "readFullDocument": "Leggi documento completo",
+    "disclaimerContent": "IMPORTANTE: AllergiApp è uno strumento di comunicazione e NON sostituisce il parere medico.\n\nL'app non garantisce la completezza delle informazioni, l'assenza di contaminazioni crociate o la corretta comprensione da parte del personale.\n\nIn caso di allergie gravi: porta sempre i farmaci prescritti, informa sempre il personale verbalmente e non affidarti esclusivamente a questa app.\n\nL'utente si assume ogni responsabilità nell'uso dell'applicazione. Gli sviluppatori non sono responsabili per reazioni allergiche o danni derivanti dall'uso dell'app."
   }
 }
