--- a/locales/en.json
+++ b/locales/en.json
@@ -8,13 +8,19 @@
     "addAllergies": "Add Allergies",
     "editAllergies": "Edit allergies",
     "showCard": "Show Card",
-    "showCardToWaiter": "Show Card to Waiter",
+    "showCardToWaiter": "Show Card",
     "settings": "Settings",
     "whereAreYouTraveling": "Where are you traveling?",
     "chooseLanguage": "Choose the language to communicate your allergies",
     "change": "Change",
     "cardReadyIn": "Your card is ready in",
-    "selectLanguage": "Select language"
+    "selectLanguage": "Select language",
+    "downloadMoreLanguages": "Download more languages",
+    "bannerWelcome": "Wherever you go",
+    "bannerMotivation": "Travel safely, communicate your allergies without barriers",
+    "bannerTip": "Add your allergies and travel with greater ease",
+    "bannerHowToUse": "Communicate clearly",
+    "bannerHowToUseDesc": "Show your card to the waiter when ordering at the restaurant"
   },
   "addAllergy": {
     "title": "Add Allergies",
@@ -36,14 +42,15 @@
     "back": "Back",
     "appLanguage": "App Language",
     "cardLanguage": "Card Language",
-    "clearData": "Clear All Data",
-    "clearDataConfirm": "Are you sure you want to clear all data?",
+    "clearData": "Reset App",
+    "clearDataConfirm": "All selected allergies and downloaded languages will be removed. Do you want to proceed?",
+    "clearDataSuccess": "App reset successfully!",
     "cancel": "Cancel",
     "confirm": "Confirm",
     "italian": "Italian",
     "english": "English",
     "downloadLanguages": "Download More Languages",
-    "downloadLanguagesDesc": "Download additional languages for allergy cards",
+    "downloadLanguagesDesc": "Download additional languages for allergy cards and to use the app offline",
     "download": "Download",
     "downloaded": "Downloaded!",
     "delete": "Delete",
@@ -62,6 +69,16 @@
     "region_europe": "Europe",
     "region_asia": "Asia & Middle East",
     "region_africa": "Africa",
-    "region_other": "Other"
+    "region_other": "Other",
+    "cancelDownload": "Cancel",
+    "downloadCancelled": "Download cancelled",
+    "privacyPolicy": "Privacy",
+    "privacyPolicyDesc": "How we handle your data",
+    "disclaimer": "Disclaimer",
+    "disclaimerDesc": "Important to read",
+    "about": "About",
+    "privacyContent": "AllergiApp stores your allergies locally on your device. The app may collect anonymous usage data to improve the service. You may optionally provide some demographic information for statistical purposes. No personally identifiable data is collected or shared. Translations are handled through external services.",
+    "readFullDocument": "Read full document",
+    "disclaimerContent": "IMPORTANT: AllergiApp is a communication tool and does NOT replace medical advice.\n\nThe app does not guarantee the completeness of information, absence of cross-contamination, or correct understanding by staff.\n\nIn case of severe allergies: always carry prescribed medications, always inform staff verbally, and do not rely solely on this app.\n\nThe user assumes all responsibility for using the application. Developers are not liable for allergic reactions or damages resulting from the use of the app."
   }
 }
